# keycloak-crd

./: Cargo.toml
src/crd/: client.rs  instance.rs  realm.rs  user.rs
tests/: instance.rs  realm.rs
