[package]
name = "keycloak-crd"
version = "0.1.1"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2018"

keywords = ["kubernetes", "operator", "sso", "keycloak"]
license = "EPL-2.0"
description = "Custom resource types for Keycloak"
repository = "https://github.com/ctron/keycloak-crd"

[dependencies]

k8s-openapi = { version = "0.23.0", features = ["latest", "schemars"] }
serde = "1.0.210"
serde_json = "1.0.128"
schemars = "0.8.21"
kube = { version = "0.96.0", default-features = false, features = ["derive"] }

[dev-dependencies]
serde_yaml = "0.9.34"
